Blank initials now fill with ? symbols

--- a/sql/Squealer.config
+++ b/sql/Squealer.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="us-ascii"?>
-<Settings ProjectName="lb">
+<Settings ProjectName="leader">
 	<DefaultUsers>
 		<User Name="dbLb" />
 	</DefaultUsers>
