--- a/app.csproj
+++ b/app.csproj
@@ -4,6 +4,6 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="System.Data.SqlClient" Version="4.5.1"/>
+    <PackageReference Include="MySql.Data" Version="8.0.12"/>
   </ItemGroup>
 </Project>
