Reverted to using MSSQL since MySql isn't working easily with .net core

--- a/app.csproj
+++ b/app.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MySql.Data" Version="5.1.7" />
+    <!--PackageReference Include="MySql.Data" Version="5.1.7" /-->
+    <PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
   </ItemGroup>
 </Project>
