--- a/.gitignore
+++ b/.gitignore
@@ -328,5 +328,5 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder
 .mfractor/
-Space.exe
-Space.dll
+GoldLeader.exe
+GoldLeader.dll
