--- a/GoldLeader/Test/Test.csproj
+++ b/GoldLeader/Test/Test.csproj
@@ -33,8 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GoldLeader">
-      <HintPath>..\GoldLeader\bin\Release\GoldLeader.dll</HintPath>
+    <Reference Include="GoldLeader, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\GoldLeader\bin\Debug\GoldLeader.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
